# flipbook

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  app.py  req.py
.github/workflows/: cmake-multi-platform.yml  release.yml
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  Events.cpp  Events.hpp  Gui.cpp  Gui.hpp  LuaEmbed.cpp  LuaEmbed.h  States.cpp  States.hpp  TextEditor.cpp  canvasStates.cpp  canvasStates.hpp  main.cpp  notmain.cpp  promptReq.cpp  promptReq.h  pxrt.cpp  pxrt.hpp
src/libs/: nfd.exp
